# scromfyUI-AceStep

./: .gitignore  .pyre_configuration  Agents.md  README.md  __init__.py  pyproject.toml  requirements.txt
AIinstructions/: README.md  systemprompt.default.txt
color_schemas/: README.md  amethyst.json  aurora.json  blood_moon.json  cotton_candy.json  cyberpunk.json  desert.json  gold.json  magma.json  ocean.json  synthwave.json
docs/: ARCHITECTURE.md  NODE_GUIDELINES.md  NODE_SPECS.md  PROGRESS.md  REFACTOR_FLAGS.md  REPO_INDEX.md  Visualizers.md
fonts/: README.md
keys/: README.md
lyrics/: README.md
masks/: README.md  convert_ldr_svgs.py  convert_svgs.py  invert_png.py
nodes/: __init__.py  acestep_chord_conditioner_node.py  acestep_chord_preview_node.py  acestep_conditioning_inspector_node.py  acestep_source_reader_node.py  audio_analyzer_node.py  audio_codes_decode_node.py  audio_codes_mixer_node.py  audio_codes_to_latent_node.py  audio_codes_to_semantic_hints_node.py  audio_codes_unary_op_node.py  audio_mask_node.py  audio_post_process_node.py  audio_roundtrip_test_node.py  audio_roundtrip_test_nodes.py  audio_vae_decode_plusplus_node.py  codec_to_latent_node.py  conditioning_base_complete_node.py  conditioning_base_extract_node.py  conditioning_base_lego_node.py  conditioning_combine_node.py  conditioning_dual_mixer_node.py  conditioning_explore_node.py  conditioning_load_node.py  conditioning_mixer_loader_node.py  conditioning_save_node.py  conditioning_split_node.py  conditioning_view_node.py  conditioning_zero_out_node.py  emoji_spinner_node.py  (+99 more)
(+65 files in other folders)
